--- a/PracticeProject/app/src/main/res/layout/activity_first.xml
+++ b/PracticeProject/app/src/main/res/layout/activity_first.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FirstActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <Button
+        android:id="@+id/first_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="FirstActivity"
+        android:onClick="onClick" />
+
+    <Button
+        android:id="@+id/main_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="MainActivity"
+        android:onClick="onClick"/>
+
+</LinearLayout>
