--- a/PracticeProject/app/src/main/res/layout/activity_main.xml
+++ b/PracticeProject/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,10 @@
         android:onClick="onClick" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/main_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button" />
+        android:text="MainActivity"
+        android:onClick="onClick"/>
 
 </LinearLayout>
