--- a/PracticeProject/app/src/main/res/layout/activity_service.xml
+++ b/PracticeProject/app/src/main/res/layout/activity_service.xml
@@ -31,4 +31,11 @@
         android:id="@+id/unbind_servcie"
         android:onClick="onClick"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="start intent service"
+        android:id="@+id/start_intent_servcie"
+        android:onClick="onClick"/>
+
 </LinearLayout>
