--- a/ToobarTest/app/src/main/res/values/styles.xml
+++ b/ToobarTest/app/src/main/res/values/styles.xml
@@ -13,6 +13,7 @@
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/white</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="background">@color/white</item>
     </style>
 
 </resources>
