配置操作提供器

--- a/ToobarTest/app/src/main/res/menu/toolbar_action.xml
+++ b/ToobarTest/app/src/main/res/menu/toolbar_action.xml
@@ -6,5 +6,11 @@
         android:icon="@drawable/toolbar_search"
         app:showAsAction="ifRoom"
         android:visible="true"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         android:title="@string/search"/>
+    <item android:id="@+id/share_data"
+        android:icon="@drawable/toolbar_share"
+        app:showAsAction="ifRoom"
+        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
+        android:title="@string/share"/>
 </menu>
