--- a/old/WanAndroid/app/src/main/res/layout/screen_slide_pager.xml
+++ b/old/WanAndroid/app/src/main/res/layout/screen_slide_pager.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
-
-    <ImageView
-        android:id="@+id/pager_image"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:scaleType="fitXY"
-        android:layout_width="wrap_content"/>
-</FrameLayout>
+    android:id="@+id/pager_image"
+    android:layout_height="180dp"
+    android:scaleType="fitCenter"
+    android:layout_width="wrap_content"/>
