Java 转 Kotlin, 转化完成，运行时 LessonActivity 的 onCreate 方法没写对，导致 Activity 无法跳转成功，浪费了很长时间

--- a/KotlinPratice/KotlinAndroid/app/src/main/res/layout/activity_main.xml
+++ b/KotlinPratice/KotlinAndroid/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
-        <com.example.app.widget.CodeView
+        <com.sword.kotlinandroid.widget.CodeView
             android:id="@+id/code_view"
             android:layout_margin="8dp"
             android:layout_width="80dp"
