--- a/KotlinPratice/KotlinAndroid/app/src/main/res/values/colors.xml
+++ b/KotlinPratice/KotlinAndroid/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="wait">#8F9DEE</color>
+    <color name="playback">#303F9F</color>
+    <color name="live">#FF4081</color>
 </resources>
