--- a/CustomView/CustomViewSet/app/src/main/res/layout/activity_main.xml
+++ b/CustomView/CustomViewSet/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"/>-->
 
-    <FrameLayout
+    <!--<FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#30000000">
@@ -52,7 +52,12 @@
         <com.sword.customviewset.view.drawtext.CustomDrawTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-    </FrameLayout>
+    </FrameLayout>-->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"/>
 
 
 
