--- a/ConstraintLayout/app/src/main/res/layout/barrier.xml
+++ b/ConstraintLayout/app/src/main/res/layout/barrier.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".BarrierActivity">
 
     <androidx.constraintlayout.widget.Barrier
         android:layout_width="wrap_content"
@@ -18,7 +19,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/view1"
         android:text="长文字长文字长文字"
-        android:textSize="32sp"
+        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
@@ -27,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
+        android:textSize="12sp"
         android:text="长文"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view1"/>
