--- a/ConstraintLayout/app/src/main/res/layout/group.xml
+++ b/ConstraintLayout/app/src/main/res/layout/group.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".Helpers"
+    tools:context=".GroupActivity"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <Button
