--- a/MotionLayout/app/src/main/res/layout/activity_drawer.xml
+++ b/MotionLayout/app/src/main/res/layout/activity_drawer.xml
@@ -1,10 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:text="@string/film_description"/>
 
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:layout_width="200dp"
+        android:layout_height="match_parent"
+        android:id="@+id/motion_layout"
+        android:layout_gravity="start"
+        android:background="@color/colorPrimary"
+        app:layoutDescription="@xml/drawer">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@null"
+            android:src="@drawable/avatar"/>
+
+    </androidx.constraintlayout.motion.widget.MotionLayout>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
