--- a/MotionLayout/example/src/main/res/values/colors.xml
+++ b/MotionLayout/example/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="textColor">#CCCCCC</color>
+    <color name="colorMark">#FFD600</color>
 </resources>
