--- a/MotionLayout/example/src/main/res/xml/scene_motion_layout.xml
+++ b/MotionLayout/example/src/main/res/xml/scene_motion_layout.xml
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            app:fab="mini"
+            app:fabSize="mini"
             app:layout_constraintBottom_toBottomOf="@id/background"
             app:layout_constraintEnd_toEndOf="@id/background"
             app:layout_constraintStart_toStartOf="@id/background"
