--- a/SwordDemoLibrary/app/src/main/res/values/styles.xml
+++ b/SwordDemoLibrary/app/src/main/res/values/styles.xml
@@ -7,4 +7,12 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <declare-styleable name="VerifyCodeInputView">
+        <attr name="gap" format="integer"/>
+        <attr name="textMaxCount" format="integer"/>
+        <attr name="borderColor" format="color"/>
+        <attr name="borderSize" format="integer"/>
+    </declare-styleable>
+
 </resources>
