--- a/SwordDemoLibrary/loginlibrary/src/main/res/values/style.xml
+++ b/SwordDemoLibrary/loginlibrary/src/main/res/values/style.xml
@@ -7,4 +7,25 @@
         <attr name="borderColor" format="color"/>
         <attr name="borderSize" format="integer"/>
     </declare-styleable>
+
+    <style name="InputEditText">
+        <item name="android:background">@drawable/edit_text_background</item>
+        <item name="android:textColorHint">@color/text_hint_color</item>
+        <item name="android:inputType">phone</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="TextViewStyle">
+        <item name="android:background">@drawable/edit_text_background</item>
+        <item name="android:textColorHint">@color/text_hint_color</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingTop">10dp</item>
+        <item name="android:paddingBottom">10dp</item>
+        <item name="android:textSize">18sp</item>
+    </style>
 </resources>
