--- a/SwordDemoLibrary/loginlibrary/src/main/res/drawable/button_background.xml
+++ b/SwordDemoLibrary/loginlibrary/src/main/res/drawable/button_background.xml
@@ -1,16 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="true">
-        <shape>
-            <solid android:color="@color/button_background"/>
-            <corners android:radius="5dp"/>
-        </shape>
-    </item>
-    <item android:state_enabled="false">
-        <shape>
-            <solid android:color="@color/xlcwsdk_gray"/>
-            <corners android:radius="5dp"/>
-        </shape>
-    </item>
+    <item android:state_enabled="true" android:drawable="@drawable/button_enable"/>
+    <item android:state_enabled="false" android:drawable="@drawable/button_disable"/>
 </selector>
