--- a/SwordDemoLibrary/loginlibrary/src/main/res/layout/list_popup_window_item_textview_only.xml
+++ b/SwordDemoLibrary/loginlibrary/src/main/res/layout/list_popup_window_item_textview_only.xml
@@ -5,5 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingRight="10dp"
-    style="@style/TextViewStyle"
+    style="@style/ListItemTextViewStyle"
     android:clickable="true"/>
