--- a/SwordDemoLibrary/loginlibrary/src/main/res/layout/xlcwsdk_password_login_dialog_layout.xml
+++ b/SwordDemoLibrary/loginlibrary/src/main/res/layout/xlcwsdk_password_login_dialog_layout.xml
@@ -1,91 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/dialog_background_color">
-
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:id="@+id/logo"
+        android:id="@+id/pass_login_logo"
         style="@style/LogoStyle"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-
     <EditText
-        android:id="@+id/xlcwsdk_get_make_sure_number_phone_et"
+        android:id="@+id/pass_login_phone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/InputEditText"
         android:hint="@string/input_phone_hint"
-        app:layout_constraintBottom_toTopOf="@id/xlcwsdk_register_register_bt"
+        app:layout_constraintBottom_toTopOf="@id/pass_login_password"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logo" />
+        app:layout_constraintTop_toBottomOf="@id/pass_login_logo" />
 
-    <CheckBox
-        android:id="@+id/regiser_protocol_checkbox"
-        android:layout_width="wrap_content"
+    <EditText
+        android:id="@+id/pass_login_password"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginRight="6dp"
-        android:button="@drawable/check_box_background"
-        app:layout_constraintEnd_toStartOf="@id/accept_protocol"
-        app:layout_constraintBottom_toBottomOf="@id/accept_protocol"
-        app:layout_constraintTop_toTopOf="@id/accept_protocol"/>
-
-
-    <androidx.constraintlayout.helper.widget.Flow
-        android:id="@+id/protocol_flow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginBottom="35dp"
-        android:layout_marginTop="10dp"
-        app:constraint_referenced_ids="accept_protocol, xlcwsdk_register_user_protocol_tv"
-        app:layout_constraintTop_toBottomOf="@id/xlcwsdk_register_register_bt"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/pass_login_footer_separate_line" />
+        style="@style/InputEditText"
+        android:hint="@string/input_phone_hint"
+        android:layout_marginTop="5dp"
+        android:drawableRight="@drawable/bg_sdk_yanjing"
+        app:layout_constraintLeft_toLeftOf="@id/pass_login_phone"
+        app:layout_constraintRight_toRightOf="@id/pass_login_phone"
+        app:layout_constraintTop_toBottomOf="@id/pass_login_phone" />
 
     <TextView
-        android:id="@+id/accept_protocol"
+        android:id="@+id/pass_login_setup_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/register_mean_aggren"
-        android:textSize="12sp"
-        android:textColor="@color/text_color_protocol"
-        app:layout_constraintBottom_toTopOf="@id/pass_login_footer_separate_line"
-        app:layout_constraintStart_toEndOf="@id/regiser_protocol_checkbox"
-        app:layout_constraintRight_toLeftOf="@id/xlcwsdk_register_user_protocol_tv"
-        app:layout_constraintTop_toBottomOf="@id/xlcwsdk_register_register_bt" />
-
-    <TextView
-        android:id="@+id/xlcwsdk_register_user_protocol_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/user_protocol"
-        android:textSize="12sp"
-        android:textColor="@color/text_color_protocol"
-        app:layout_constraintBottom_toTopOf="@id/pass_login_footer_separate_line"
-        app:layout_constraintLeft_toRightOf="@id/accept_protocol"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/xlcwsdk_register_register_bt" />
+        android:text="@string/password_setup_title"
+        android:textColor="@color/button_background"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:textSize="18sp"
+        app:layout_constraintTop_toBottomOf="@id/pass_login_password"
+        app:layout_constraintEnd_toEndOf="@id/pass_login_phone" />
 
     <Button
-        android:id="@+id/xlcwsdk_register_register_bt"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_background"
-        android:layout_marginTop="5dp"
+        android:id="@+id/passs_login_confirm"
+        style="@style/ButtonEnableStyle"
         android:text="@string/next_step"
-        android:textColor="#fff"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@id/accept_protocol"
-        app:layout_constraintLeft_toLeftOf="@id/xlcwsdk_get_make_sure_number_phone_et"
-        app:layout_constraintRight_toRightOf="@id/xlcwsdk_get_make_sure_number_phone_et"
-        app:layout_constraintTop_toBottomOf="@id/xlcwsdk_get_make_sure_number_phone_et" />
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/pass_login_phone"
+        app:layout_constraintEnd_toEndOf="@id/pass_login_phone"
+        app:layout_constraintTop_toBottomOf="@id/pass_login_setup_password"/>
 
 
     <androidx.constraintlayout.helper.widget.Flow
@@ -148,19 +117,20 @@
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_toLeftOf="@id/footer_password_login_info"
-        android:src="@drawable/sdk_account_now"/>
+        android:src="@drawable/bg_sdk_yanzhengma"/>
 
     <TextView
         android:id="@+id/footer_password_login_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:text="@string/account_login"
+        android:text="@string/verify_code_login"
         android:textSize="14sp"
         app:layout_constraintRight_toLeftOf="@id/footer_password_login"
         app:layout_constraintRight_toRightOf="@id/pass_login_flow"
         app:layout_constraintTop_toTopOf="@id/pass_login_flow"
         app:layout_constraintBottom_toBottomOf="@id/pass_login_flow"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
