--- a/SwordDemoLibrary/loginlibrary/src/main/res/layout/xlcwsdk_password_login_dialog_layout.xml
+++ b/SwordDemoLibrary/loginlibrary/src/main/res/layout/xlcwsdk_password_login_dialog_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -46,90 +46,21 @@
         app:layout_constraintTop_toBottomOf="@id/pass_login_password"
         app:layout_constraintEnd_toEndOf="@id/pass_login_phone" />
 
+<!--    app:layout_constraintBottom_toTopOf="@id/token_login_footer_separate_line"-->
     <Button
         android:layout_width="0dp"
         android:id="@+id/passs_login_confirm"
         style="@style/ButtonEnableStyle"
         android:text="@string/next_step"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="25dp"
         app:layout_constraintStart_toStartOf="@id/pass_login_phone"
         app:layout_constraintEnd_toEndOf="@id/pass_login_phone"
-        app:layout_constraintTop_toBottomOf="@id/pass_login_setup_password"/>
+        app:layout_constraintTop_toBottomOf="@id/pass_login_setup_password"
+        />
 
 
-    <androidx.constraintlayout.helper.widget.Flow
-        android:id="@+id/visitor_login_flow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:flow_horizontalGap="8dp"
-        app:constraint_referenced_ids="footer_visitor_login_icon, footer_visitor_login_info"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/pass_login_footer_separate_line"
-        app:layout_constraintTop_toTopOf="@id/pass_login_footer_separate_line"
-        app:layout_constraintBottom_toBottomOf="@id/pass_login_footer_separate_line"/>
 
-    <TextView
-        android:id="@+id/footer_visitor_login_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="0dp"
-        android:layout_toRightOf="@+id/footer_visitor_login_icon"
-        android:text="@string/visitor_login"
-        android:textSize="14sp"
-        app:layout_constraintLeft_toRightOf="@id/footer_visitor_login_icon"
-        app:layout_constraintRight_toRightOf="@id/visitor_login_flow"
-        app:layout_constraintTop_toTopOf="@id/visitor_login_flow"
-        app:layout_constraintBottom_toBottomOf="@id/visitor_login_flow"/>
-
-    <ImageView
-        android:id="@+id/footer_visitor_login_icon"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:src="@drawable/sdk_visitor_now"/>
-
-
-    <View
-        android:id="@+id/pass_login_footer_separate_line"
-        android:layout_width="1dp"
-        android:layout_height="20dp"
-        android:background="@color/xlcwsdk_gray"
-        android:layout_marginBottom="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintRight_toLeftOf="parent" />
-
-    <androidx.constraintlayout.helper.widget.Flow
-        android:id="@+id/pass_login_flow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:flow_horizontalGap="8dp"
-        app:constraint_referenced_ids="footer_password_login, footer_password_login_info"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/pass_login_footer_separate_line"
-        app:layout_constraintTop_toTopOf="@id/pass_login_footer_separate_line"
-        app:layout_constraintBottom_toBottomOf="@id/pass_login_footer_separate_line"/>
-
-    <ImageView
-        android:id="@+id/footer_password_login"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_toLeftOf="@id/footer_password_login_info"
-        android:src="@drawable/bg_sdk_yanzhengma"/>
-
-    <TextView
-        android:id="@+id/footer_password_login_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:text="@string/verify_code_login"
-        android:textSize="14sp"
-        app:layout_constraintRight_toLeftOf="@id/footer_password_login"
-        app:layout_constraintRight_toRightOf="@id/pass_login_flow"
-        app:layout_constraintTop_toTopOf="@id/pass_login_flow"
-        app:layout_constraintBottom_toBottomOf="@id/pass_login_flow"/>
 
 
 
