--- a/SwordDemoLibrary/loginlibrary/src/main/res/layout/spinner_layout_textview.xml
+++ b/SwordDemoLibrary/loginlibrary/src/main/res/layout/spinner_layout_textview.xml
@@ -4,5 +4,4 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingRight="10dp"
-    android:drawableRight="@drawable/bg_sdk_shanchu"
-    style="@style/InputEditText"/>
+    android:drawableRight="@drawable/bg_sdk_shanchu" />
