--- a/SwordDemoLibrary/loginlibrary/src/main/res/layout/xlcwsdk_password_login_dialog_layout.xml
+++ b/SwordDemoLibrary/loginlibrary/src/main/res/layout/xlcwsdk_password_login_dialog_layout.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         style="@style/InputEditText"
-        android:hint="@string/input_phone_hint"
+        android:hint="@string/input_password_hint"
         android:layout_marginTop="5dp"
         android:drawableRight="@drawable/bg_sdk_yanjing"
         app:layout_constraintLeft_toLeftOf="@id/pass_login_phone"
@@ -46,7 +46,6 @@
         app:layout_constraintTop_toBottomOf="@id/pass_login_password"
         app:layout_constraintEnd_toEndOf="@id/pass_login_phone" />
 
-<!--    app:layout_constraintBottom_toTopOf="@id/token_login_footer_separate_line"-->
     <Button
         android:layout_width="0dp"
         android:id="@+id/passs_login_confirm"
@@ -57,7 +56,85 @@
         app:layout_constraintStart_toStartOf="@id/pass_login_phone"
         app:layout_constraintEnd_toEndOf="@id/pass_login_phone"
         app:layout_constraintTop_toBottomOf="@id/pass_login_setup_password"
-        />
+        app:layout_constraintBottom_toTopOf="@id/token_login_footer_separate_line"/>
+
+
+    <View
+        android:id="@+id/token_login_footer_separate_line"
+        android:layout_width="1dp"
+        android:layout_height="20dp"
+        android:background="@color/xlcwsdk_gray"
+        android:layout_marginBottom="15dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
+    <androidx.constraintlayout.helper.widget.Flow
+        android:id="@+id/footer_visitor_login_flow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:flow_horizontalGap="8dp"
+        app:constraint_referenced_ids="footer_visitor_login_icon, footer_visitor_login_info"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/token_login_footer_separate_line"
+        app:layout_constraintTop_toTopOf="@id/token_login_footer_separate_line"
+        app:layout_constraintBottom_toBottomOf="@id/token_login_footer_separate_line"/>
+
+    <ImageView
+        android:id="@+id/footer_visitor_login_icon"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:src="@drawable/sdk_visitor_now"/>
+
+    <TextView
+        android:id="@+id/footer_visitor_login_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="0dp"
+        android:layout_toRightOf="@+id/footer_visitor_login_icon"
+        android:text="@string/visitor_login"
+        android:textSize="14sp"
+        app:layout_constraintLeft_toRightOf="@id/footer_visitor_login_icon"
+        app:layout_constraintRight_toRightOf="@id/footer_visitor_login_flow"
+        app:layout_constraintTop_toTopOf="@id/footer_visitor_login_flow"
+        app:layout_constraintBottom_toBottomOf="@id/footer_visitor_login_flow"/>
+
+
+
+
+    <androidx.constraintlayout.helper.widget.Flow
+        android:id="@+id/footer_verify_code_login_flow"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:flow_horizontalGap="8dp"
+        app:constraint_referenced_ids="footer_password_login, footer_password_login_info"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/token_login_footer_separate_line"
+        app:layout_constraintTop_toTopOf="@id/token_login_footer_separate_line"
+        app:layout_constraintBottom_toBottomOf="@id/token_login_footer_separate_line"/>
+
+    <ImageView
+        android:id="@+id/footer_password_login"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_toLeftOf="@id/footer_password_login_info"
+        android:src="@drawable/bg_sdk_yanzhengma"/>
+
+    <TextView
+        android:id="@+id/footer_password_login_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:text="@string/verify_code_login"
+        android:textSize="14sp"
+        app:layout_constraintRight_toLeftOf="@id/footer_password_login"
+        app:layout_constraintRight_toRightOf="@id/footer_verify_code_login_flow"
+        app:layout_constraintTop_toTopOf="@id/footer_verify_code_login_flow"
+        app:layout_constraintBottom_toBottomOf="@id/footer_verify_code_login_flow"/>
 
 
 
