--- a/SwordDemoLibrary/loginlibrary/src/main/res/values/colors.xml
+++ b/SwordDemoLibrary/loginlibrary/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="text_color_protocol">#3a3a38</color>
     <color name="check_box_background_color">#E2E2E4</color>
     <color name="dialog_title_text_color">#3f4044</color>
+    <color name="text_color_item">#484846</color>
 </resources>
