扔物线 kotlin 学习

--- a/SwordDemoLibrary/learnkotlin/src/main/res/layout/activity_main.xml
+++ b/SwordDemoLibrary/learnkotlin/src/main/res/layout/activity_main.xml
@@ -59,7 +59,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
 
-        <com.example.app.widget.CodeView
+        <com.example.learnkotlin.main.widget.CodeView
             android:id="@+id/code_view"
             android:layout_margin="8dp"
             android:layout_width="80dp"
