--- a/SwordDemoLibrary/learnkotlin/src/main/res/layout/activity_lesson.xml
+++ b/SwordDemoLibrary/learnkotlin/src/main/res/layout/activity_lesson.xml
@@ -9,7 +9,7 @@
     tools:context=".lesson.LessonActivity">
     
     <!-- ActionBar 和 Toolbar 不可共存 -->
-    <Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
