《大型 Android 系统重构实战》 - 02｜自动化测试：从0开始为一个特性覆盖自动化测试 - 编写登录页面

--- a/SwordDemoLibrary/app/src/main/res/values/colors.xml
+++ b/SwordDemoLibrary/app/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@
     <color name="color_orange">#F27920</color>
     <color name="color_gray">#CFD0D2</color>
     <color name="dialog_title_text_color">#3f4044</color>
+
+    <color name="common_accent_color">#5A8DDF</color>
+    <!-- 按钮按压时的颜色 -->
+    <color name="common_button_pressed_color">#AA5A8DDF</color>
+    <!-- 按钮禁用时的颜色 -->
+    <color name="common_button_disable_color">#BBBBBB</color>
 </resources>
