扔物线高级课程作业 - 自定义布局尺寸

--- a/SwordDemoLibrary/app/src/main/res/layout/activity_main2.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/activity_main2.xml
@@ -17,9 +17,9 @@
         android:layout_height="300dp"
         android:background="@color/colorAccent"/>-->
 
-    <com.example.swordlibrary.view.CircleImageView
+    <!--<com.example.swordlibrary.view.CircleImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@color/colorAccent"/>
+        android:background="@color/colorAccent"/>-->
 
 </LinearLayout>
