扔物线作业 - 自定义 View 触摸反馈：双向滑动的 ScalableImageView

--- a/SwordDemoLibrary/app/src/main/res/layout/activity_main.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:scrollbars="vertical">
+    android:layout_height="match_parent">
 
-    <FrameLayout
+    <!--<FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/color_gray"
@@ -31,7 +29,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-    </FrameLayout>
+    </FrameLayout>-->
+    
+    <com.example.swordlibrary.view.ScaleableImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
     <!--<com.example.swordlibrary.view.DashBoardView
