扔物线高级课程 - 自定义 View 触摸反馈：嵌套滑动 - NestedScrollView 实战

--- a/SwordDemoLibrary/app/src/main/res/layout/nested_scalable_image_view.xml
+++ b/SwordDemoLibrary/app/src/main/res/layout/nested_scalable_image_view.xml
@@ -11,10 +11,10 @@
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="800dp"
             android:background="@color/colorAccent" />
 
-        <com.hencoder.nestedscroll.view.NestedScalableImageView
+        <com.example.swordlibrary.view.nestedscroll.NestedScrollScaleableImageView
             android:layout_width="match_parent"
             android:layout_height="400dp" />
 
